--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ button.enabled {
 
 <script>
 /* ===== ON / OFF MODE ===== */
-var FORM_ENABLED = true; // true = ON | false = OFF
+var FORM_ENABLED = false; // true = ON | false = OFF
 </script>
 
 <!-- MAINTENANCE -->
