--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ button.enabled {
 
 <script>
 /* ===== ON / OFF MODE ===== */
-var FORM_ENABLED = false; // true = ON | false = OFF
+var FORM_ENABLED = true; // true = ON | false = OFF
 </script>
 
 <!-- MAINTENANCE -->
@@ -184,7 +184,7 @@ var FORM_ENABLED = false; // true = ON | false = OFF
   <h2>🚧 Temporarily Unavailable</h2>
   <p>
     This submission form is currently unavailable.<br><br>
-    Please try again later or contact the administrator.
+    Please contact the administrator.
   </p>
 </div>
 
