--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Agency Information Submission</title>
+<title>Agency Contact Info Submission</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
