--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ var FORM_ENABLED = true; // true = ON | false = OFF
 
 <!-- FORM -->
 <div class="container" id="formBox">
-  <h2>📄 AGENCY INFORMATION SUBMISSION</h2>
+  <h2>📄 AGENCY CONTACT INFO SUBMISSION</h2>
 
   <form onsubmit="return submitForm();">
 
