--- a/index.html
+++ b/index.html
@@ -6,364 +6,176 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <style>
-html, body {
-  height: 100%;
-  margin: 0;
-}
-
+html, body { height:100%; margin:0; }
 body {
   font-family: Arial, sans-serif;
   background: linear-gradient(180deg, #eef1f4, #f4f6f8);
   padding: 20px;
-  color: #000;
 }
-
-/* ===== CONTAINER ===== */
 .container {
   max-width: 420px;
   margin: auto;
-  background: #ffffff;
+  background: #fff;
   padding: 16px 20px 20px;
   border-radius: 8px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  position: relative;
+  box-shadow: 0 8px 20px rgba(0,0,0,.08);
 }
-
-/* SUCCESS BOX */
-.success-container {
-  max-width: 520px;
+h2 { text-align:center; margin:0 0 8px; }
+label { font-weight:bold; }
+input {
+  width:100%; padding:10px; margin:5px 0 4px;
+  border:1px solid #ccc; border-radius:5px;
+  text-transform:uppercase;
 }
-
-/* ===== TEXT ===== */
-h2 {
-  text-align: center;
-  margin-top: 0;
-  margin-bottom: 8px;
-}
-
-label { font-weight: bold; }
-
-input[type="text"],
-input[type="tel"] {
-  width: 100%;
-  padding: 10px;
-  margin: 5px 0 4px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  box-sizing: border-box;
-  text-transform: uppercase;
-}
-
-::placeholder {
-  text-transform: none;
-  color: #999;
-}
-
-/* ===== ERROR ===== */
-input.error {
-  border-color: #e53935;
-  background: #fff5f5;
-}
-
-.errorText {
-  font-size: 12px;
-  color: #e53935;
-  margin-bottom: 8px;
-  display: none;
-}
-
-/* ===== CONSENT ===== */
-.consent {
-  font-size: 13px;
-  margin: 10px 0;
-  color: #555;
-}
-
-/* ===== BUTTON ===== */
+.error { border-color:#e53935; background:#fff5f5; }
+.errorText { font-size:12px; color:#e53935; display:none; }
+.consent { font-size:13px; margin:10px 0; }
 button {
-  width: 100%;
-  padding: 12px;
-  background: #1e88e5;
-  color: white;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  opacity: 0.6;
-  cursor: not-allowed;
+  width:100%; padding:12px;
+  background:#1e88e5; color:#fff;
+  border:none; border-radius:5px;
+  font-size:16px; opacity:.6; cursor:not-allowed;
 }
-button.enabled {
-  opacity: 1;
-  cursor: pointer;
-}
-
-/* ===== HELPER ===== */
-.helper {
-  font-size: 12px;
-  color: #777;
-  margin-top: 6px;
-  text-align: center;
-}
-
-/* ===== SUCCESS ===== */
-.successIcon {
-  margin: 15px auto;
-  width: 70px;
-}
-.successIcon svg { width: 100%; }
-
-.ref {
-  font-weight: bold;
-  text-align: center;
-  margin: 6px 0 12px;
-  font-size: 14px;
-}
-
-.summary {
-  font-size: 14px;
-  margin-top: 10px;
-  line-height: 1.6;
-  text-transform: uppercase;
-}
-
-/* WATERMARK */
-.watermark {
-  position: absolute;
-  top: 45%;
-  left: 50%;
-  transform: translate(-50%, -50%) rotate(-25deg);
-  font-size: 48px;
-  color: rgba(0,0,0,0.06);
-  font-weight: bold;
-  display: none;
-  pointer-events: none;
-}
-
-/* ===== MAINTENANCE ===== */
-.maintenance {
-  max-width: 420px;
-  margin: auto;
-  background: #ffffff;
-  padding: 25px 20px;
-  border-radius: 8px;
-  box-shadow: 0 8px 20px rgba(0,0,0,0.08);
-  text-align: center;
-}
-.maintenance p {
-  font-size: 13px;
-  color: #555;
-}
-
-/* ===== FOOTER ===== */
-.footer {
-  margin-top: 25px;
-  text-align: center;
-  font-size: 11px;
-  color: #888;
-}
-.divider {
-  height: 2px;
-  background: linear-gradient(to right, transparent, #1e88e5, transparent);
-  margin-bottom: 10px;
-}
-.footer a {
-  color: #888;
-  text-decoration: none;
-}
+button.enabled { opacity:1; cursor:pointer; }
+.helper { font-size:12px; text-align:center; color:#777; }
+.success { display:none; text-align:center; }
 </style>
 </head>
 
 <body>
 
-<script>
-/* ===== ON / OFF MODE ===== */
-var FORM_ENABLED = true; // true = ON | false = OFF
-</script>
-
-<!-- MAINTENANCE -->
-<div class="maintenance" id="maintenanceBox" style="display:none;">
-  <h2>🚧 Temporarily Unavailable</h2>
-  <p>
-    This submission form is currently unavailable.<br><br>
-    Please contact the administrator.
-  </p>
-</div>
-
-<!-- FORM -->
 <div class="container" id="formBox">
-  <h2>📄 AGENCY CONTACT INFO SUBMISSION</h2>
+<h2>📄 AGENCY CONTACT INFO</h2>
 
-  <form onsubmit="return submitForm();">
+<form onsubmit="return submitForm();">
 
-    <label>Agency Name (Mandatory)</label>
-    <input type="text" id="agency" placeholder="Example: ABC DEBT SDN BHD">
-    <div class="errorText" id="err_agency">This field is required</div>
+<label>Agency Name *</label>
+<input type="text" id="agency">
+<div class="errorText" id="err_agency">Required</div>
 
-    <label>PIC Name 1 (Mandatory)</label>
-    <input type="text" id="pic1" placeholder="Example: MR JOHN DOE">
-    <div class="errorText" id="err_pic1">This field is required</div>
+<label>PIC Name 1 *</label>
+<input type="text" id="pic1">
+<div class="errorText" id="err_pic1">Required</div>
 
-    <label>PIC Name 2 (Optional)</label>
-    <input type="text" id="pic2" placeholder="Example: MISS JANE DOE">
+<label>PIC Name 2</label>
+<input type="text" id="pic2">
 
-    <label>Contact No (Mandatory)</label>
-    <input type="tel" id="contact1" placeholder="Example: 0123456789" oninput="formatPhone(this)">
-    <div class="errorText" id="err_contact1">This field is required</div>
+<label>Contact No *</label>
+<input type="tel" id="contact1" oninput="formatPhone(this)">
+<div class="errorText" id="err_contact1">Required</div>
 
-    <label>Contact No (Optional)</label>
-    <input type="tel" id="contact2" placeholder="Example: 0123456789" oninput="formatPhone(this)">
+<label>Contact No (Optional)</label>
+<input type="tel" id="contact2" oninput="formatPhone(this)">
 
-    <label>WhatsApp No (Mandatory)</label>
-    <input type="tel" id="whatsapp" placeholder="Example: 0123456789" oninput="formatPhone(this)">
-    <div class="errorText" id="err_whatsapp">This field is required</div>
+<label>WhatsApp No *</label>
+<input type="tel" id="whatsapp" oninput="formatPhone(this)">
+<div class="errorText" id="err_whatsapp">Required</div>
 
-    <div class="consent">
-      <input type="checkbox" id="consent" onclick="updateState()">
-      I confirm that the information provided is accurate and consent to its use
-      for official communication purposes.
-    </div>
-
-    <button type="submit" id="submitBtn">Submit</button>
-    <div class="helper" id="helperText"></div>
-  </form>
+<div class="consent">
+<input type="checkbox" id="consent" onclick="updateState()">
+I confirm the information is accurate
 </div>
 
-<!-- SUCCESS -->
-<div class="container success-container" id="successBox" style="display:none;">
-  <div class="watermark" id="watermark">SUBMITTED</div>
+<button id="submitBtn">Submit</button>
+<div class="helper" id="helperText"></div>
 
-  <div class="successIcon">
-    <svg viewBox="0 0 24 24" fill="none">
-      <circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
-      <path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
-    </svg>
-  </div>
-
-  <h2>Submission Successful</h2>
-  <div class="ref" id="refDisplay"></div>
-  <div class="summary" id="summaryBox"></div>
-
-  <div class="consent" style="margin-top:15px;">
-    ✔ CONSENT CONFIRMED FOR OFFICIAL COMMUNICATION PURPOSES.
-  </div>
-
-  <p style="text-align:center;font-size:13px;">
-    You may safely close this page.
-  </p>
+</form>
 </div>
 
-<!-- FOOTER -->
-<div class="footer">
-  <div class="divider"></div>
-  <div id="trademark"></div>
-  <div>
-    Information submitted is collected solely for communication and
-    administrative record purposes.
-  </div>
+<div class="container success" id="successBox">
+<h2>✅ Submission Successful</h2>
+<p id="refDisplay"></p>
+<p>You may close this page.</p>
 </div>
 
 <script>
-/* ===== PAGE LOAD ===== */
-window.onload = function () {
-  if (!FORM_ENABLED) {
-    formBox.style.display = "none";
-    successBox.style.display = "none";
-    maintenanceBox.style.display = "block";
-  }
-};
+const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbyUej6006JnB65NObWL-FzOT_Kyv5PSbOk3OlXM9mb1BtlBAuS2ayqCG2xSvroduw0B/exec";
 
-/* ===== VALIDATION & SUBMIT ===== */
-const mandatoryFields = [
-  { id: "agency", err: "err_agency" },
-  { id: "pic1", err: "err_pic1" },
-  { id: "contact1", err: "err_contact1" },
-  { id: "whatsapp", err: "err_whatsapp" }
+const mandatory = [
+ {id:"agency",err:"err_agency"},
+ {id:"pic1",err:"err_pic1"},
+ {id:"contact1",err:"err_contact1"},
+ {id:"whatsapp",err:"err_whatsapp"}
 ];
 
-function formatPhone(el) {
-  let v = el.value.replace(/\D/g,'');
-  if (v.startsWith("0")) v = "6" + v;
-  if (!v.startsWith("6")) v = "6" + v;
-  el.value = v;
+function formatPhone(el){
+ let v = el.value.replace(/\D/g,"");
+ if(v.startsWith("0")) v="6"+v;
+ if(!v.startsWith("6")) v="6"+v;
+ el.value=v;
 }
 
-function generateRef() {
-  const d = new Date();
-  return "AGY-" +
-    d.getFullYear() +
-    String(d.getMonth()+1).padStart(2,"0") +
-    String(d.getDate()).padStart(2,"0") + "-" +
-    String(d.getHours()).padStart(2,"0") +
-    String(d.getMinutes()).padStart(2,"0") +
-    String(d.getSeconds()).padStart(2,"0");
+function updateState(){
+ let ok=true;
+ mandatory.forEach(f=>{
+  let i=document.getElementById(f.id);
+  let e=document.getElementById(f.err);
+  if(!i.value.trim()){
+   ok=false; i.classList.add("error"); e.style.display="block";
+  } else {
+   i.classList.remove("error"); e.style.display="none";
+  }
+ });
+ submitBtn.disabled=!ok||!consent.checked;
+ submitBtn.classList.toggle("enabled",!submitBtn.disabled);
 }
 
-function updateState() {
-  let ok = true;
-  mandatoryFields.forEach(f => {
-    const i = document.getElementById(f.id);
-    const e = document.getElementById(f.err);
-    if (!i.value.trim()) {
-      ok = false;
-      i.classList.add("error");
-      e.style.display = "block";
-    } else {
-      i.classList.remove("error");
-      e.style.display = "none";
-    }
-  });
+mandatory.forEach(f=>{
+ document.getElementById(f.id).addEventListener("input",updateState);
+});
 
-  submitBtn.disabled = !ok || !consent.checked;
-  submitBtn.classList.toggle("enabled", !submitBtn.disabled);
-  helperText.innerText = !ok
-    ? "Please complete all mandatory fields."
-    : !consent.checked
-    ? "Please confirm consent to proceed."
-    : "";
+function generateRef(){
+ let d=new Date();
+ return "AGY-"+d.getTime();
 }
 
-mandatoryFields.forEach(f =>
-  document.getElementById(f.id).addEventListener("input", updateState)
-);
+async function submitForm(){
+ updateState();
+ if(submitBtn.disabled) return false;
 
-function submitForm() {
-  updateState();
-  if (submitBtn.disabled) return false;
+ const agencyName = agency.value.toUpperCase().trim();
+ const agencyKey = agencyName.split(" ")[0];
 
-  const ref = generateRef();
-  const data = new URLSearchParams();
-  data.append("ref", ref);
-  data.append("agency", agency.value.toUpperCase());
-  data.append("pic1", pic1.value.toUpperCase());
-  data.append("pic2", pic2.value.toUpperCase());
-  data.append("contact1", contact1.value);
-  data.append("contact2", contact2.value);
-  data.append("whatsapp", whatsapp.value);
-  data.append("consent", "YES");
+ const check = await fetch(
+   SCRIPT_URL+"?action=check&key="+encodeURIComponent(agencyKey)
+ );
+ const checkResult = await check.text();
 
-  fetch("https://script.google.com/macros/s/AKfycbx8DYT7cJ2tVURhO_ecoYnyEKrhdENH8wg3BHCH0RPJTmS8duYZXynltbDrpq4zx8kY/exec", { method: "POST", body: data });
+ if(checkResult==="BLOCKED"){
+   alert("This agency record has already been updated once.\nFurther updates are not allowed.");
+   return false;
+ }
 
-  formBox.style.display = "none";
-  successBox.style.display = "block";
-  watermark.style.display = "block";
+ if(checkResult==="EXISTS"){
+   if(!confirm(
+     "This agency already exists.\n\nDo you want to update the record?\n\nUpdate is allowed only once."
+   )) return false;
+ }
 
-  refDisplay.innerText = "REFERENCE NO: " + ref;
-  summaryBox.innerHTML =
-    `<div><b>AGENCY:</b> ${agency.value.toUpperCase()}</div>
-     <div><b>PIC NAME 1:</b> ${pic1.value.toUpperCase()}</div>
-     ${pic2.value ? `<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>` : ""}
-     <div><b>CONTACT (MANDATORY):</b> ${contact1.value}</div>
-     ${contact2.value ? `<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>` : ""}
-     <div><b>WHATSAPP NO:</b> ${whatsapp.value}</div>`;
+ const data = new URLSearchParams();
+ data.append("ref",generateRef());
+ data.append("agency",agencyName);
+ data.append("pic1",pic1.value.toUpperCase());
+ data.append("pic2",pic2.value.toUpperCase());
+ data.append("contact1",contact1.value);
+ data.append("contact2",contact2.value);
+ data.append("whatsapp",whatsapp.value);
+ data.append("consent","YES");
 
-  return false;
+ const resp = await fetch(SCRIPT_URL,{method:"POST",body:data});
+ const result = await resp.text();
+
+ if(result==="BLOCKED"){
+   alert("Update not allowed.");
+   return false;
+ }
+
+ formBox.style.display="none";
+ successBox.style.display="block";
+ refDisplay.innerText="Reference No: "+data.get("ref");
+
+ return false;
 }
-
-/* FOOTER */
-(function(){
-  const year = new Date().getFullYear();
-  trademark.innerHTML =
-    `© ${year} <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> · For Authorized Agency Use`;
-})();
 </script>
 
 </body>
