--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@ body{
     radial-gradient(circle at bottom right, #fce4ec, transparent 40%),
     linear-gradient(180deg, #eef1f4, #f4f6f8);
   padding:20px;
+  color:#000;
 }
 
-/* ===== CARD ===== */
+/* ===== CONTAINER ===== */
 .container{
   max-width:420px;
   margin:auto;
@@ -37,6 +38,8 @@ body{
   border-radius:10px 10px 0 0;
 }
 
+.success-container{ max-width:520px; }
+
 @keyframes fade{
   from{opacity:0; transform:translateY(8px)}
   to{opacity:1; transform:none}
@@ -46,6 +49,12 @@ body{
 h2{ text-align:center; margin:6px 0 12px }
 label{ font-size:12px; color:#555; font-weight:bold }
 .req{ color:#e53935 }
+.helper{
+  font-size:12px;
+  color:#777;
+  margin-top:6px;
+  text-align:center;
+}
 
 /* ===== INPUT ===== */
 .input-wrap{ position:relative }
@@ -63,6 +72,11 @@ input{
   border-radius:6px;
   font-size:14px;
   box-sizing:border-box;
+  text-transform:uppercase;
+}
+::placeholder{
+  text-transform:none;
+  color:#999;
 }
 input:focus{
   border-color:#1e88e5;
@@ -93,9 +107,9 @@ input.error{
 
 /* ===== CONSENT ===== */
 .consent{
-  font-size:12px;
-  color:#555;
+  font-size:13px;
   margin:10px 0;
+  color:#555;
 }
 
 /* ===== BUTTON ===== */
@@ -109,10 +123,12 @@ button{
   background:#90caf9;
   cursor:not-allowed;
   transition:.2s;
+  opacity:.6;
 }
 button.enabled{
   background:linear-gradient(135deg,#1e88e5,#42a5f5);
   cursor:pointer;
+  opacity:1;
 }
 button.enabled:hover{
   transform:translateY(-1px);
@@ -137,6 +153,12 @@ button.enabled:hover{
   text-align:center;
   font-weight:bold;
   margin-bottom:10px;
+  font-size:14px;
+}
+.summary{
+  font-size:14px;
+  margin-top:10px;
+  line-height:1.6;
 }
 .summary div{
   background:#fafafa;
@@ -145,19 +167,45 @@ button.enabled:hover{
   border-radius:5px;
   margin-bottom:5px;
 }
+.watermark{
+  position:absolute;
+  top:45%;
+  left:50%;
+  transform:translate(-50%,-50%) rotate(-25deg);
+  font-size:48px;
+  color:rgba(0,0,0,0.06);
+  font-weight:bold;
+  display:none;
+  pointer-events:none;
+}
+
+/* ===== MAINTENANCE ===== */
+.maintenance{
+  max-width:420px;
+  margin:auto;
+  background:#fff;
+  padding:25px 20px;
+  border-radius:10px;
+  box-shadow:0 8px 20px rgba(0,0,0,.08);
+  text-align:center;
+}
+.maintenance p{ font-size:13px; color:#555 }
 
 /* ===== FOOTER ===== */
 .footer{
-  max-width:420px;
-  margin:30px auto 0;
+  margin-top:25px;
+  text-align:center;
   font-size:11px;
   color:#888;
-  text-align:center;
 }
 .divider{
   height:2px;
   background:linear-gradient(to right,transparent,#1e88e5,transparent);
-  margin-bottom:8px;
+  margin-bottom:10px;
+}
+.footer a{
+  color:#888;
+  text-decoration:none;
 }
 </style>
 </head>
@@ -165,133 +213,218 @@ button.enabled:hover{
 <body>
 
 <script>
+/* ===== ON / OFF MODE ===== */
 var FORM_ENABLED = true;
 </script>
 
+<!-- MAINTENANCE -->
+<div class="maintenance" id="maintenanceBox" style="display:none;">
+  <h2>🚧 Temporarily Unavailable</h2>
+  <p>
+    This submission form is currently unavailable.<br><br>
+    Please contact the administrator.
+  </p>
+</div>
+
+<!-- FORM -->
 <div class="container" id="formBox">
-<h2>📄 AGENCY CONTACT INFO</h2>
+  <h2>📄 AGENCY CONTACT INFO SUBMISSION</h2>
 
-<form onsubmit="return submitForm();">
+  <form onsubmit="return submitForm();">
 
-<div class="section-title">Agency</div>
-<label>Agency Name <span class="req">*</span></label>
-<div class="input-wrap">
-<span>🏢</span>
-<input id="agency">
-</div>
-<div class="errorText" id="err_agency">Required</div>
+    <div class="section-title">Agency Information</div>
 
-<label>PIC Name 1 <span class="req">*</span></label>
-<div class="input-wrap">
-<span>👤</span>
-<input id="pic1">
-</div>
-<div class="errorText" id="err_pic1">Required</div>
+    <label>Agency Name (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>🏢</span>
+      <input type="text" id="agency" placeholder="Example: ABC DEBT SDN BHD">
+    </div>
+    <div class="errorText" id="err_agency">This field is required</div>
 
-<label>PIC Name 2</label>
-<div class="input-wrap">
-<span>👤</span>
-<input id="pic2">
-</div>
+    <label>PIC Name 1 (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>👤</span>
+      <input type="text" id="pic1" placeholder="Example: MR JOHN DOE">
+    </div>
+    <div class="errorText" id="err_pic1">This field is required</div>
 
-<div class="section-title">Contact</div>
-<label>Contact No <span class="req">*</span></label>
-<div class="input-wrap">
-<span>📞</span>
-<input id="contact1" oninput="formatPhone(this)">
-</div>
-<div class="errorText" id="err_contact1">Required</div>
+    <label>PIC Name 2 (Optional)</label>
+    <div class="input-wrap">
+      <span>👤</span>
+      <input type="text" id="pic2" placeholder="Example: MISS JANE DOE">
+    </div>
 
-<label>WhatsApp No <span class="req">*</span></label>
-<div class="input-wrap">
-<span>💬</span>
-<input id="whatsapp" oninput="formatPhone(this)">
-</div>
-<div class="errorText" id="err_whatsapp">Required</div>
+    <div class="section-title">Contact Information</div>
 
-<div class="consent">
-<input type="checkbox" id="consent" onclick="updateState()">
-I confirm the information is accurate for official communication.
-</div>
+    <label>Contact No (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>📞</span>
+      <input type="tel" id="contact1" placeholder="Example: 0123456789" oninput="formatPhone(this)">
+    </div>
+    <div class="errorText" id="err_contact1">This field is required</div>
 
-<button id="submitBtn">Submit</button>
+    <label>Contact No (Optional)</label>
+    <div class="input-wrap">
+      <span>📞</span>
+      <input type="tel" id="contact2" placeholder="Example: 0123456789" oninput="formatPhone(this)">
+    </div>
 
-</form>
-</div>
+    <label>WhatsApp No (Mandatory) <span class="req">*</span></label>
+    <div class="input-wrap">
+      <span>💬</span>
+      <input type="tel" id="whatsapp" placeholder="Example: 0123456789" oninput="formatPhone(this)">
+    </div>
+    <div class="errorText" id="err_whatsapp">This field is required</div>
 
-<div class="container" id="successBox" style="display:none">
-<div class="successIcon">
-<svg viewBox="0 0 24 24" fill="none">
-<circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
-<path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
-</svg>
-</div>
+    <div class="consent">
+      <input type="checkbox" id="consent" onclick="updateState()">
+      I confirm that the information provided is accurate and consent to its use
+      for official communication purposes.
+    </div>
 
-<h2>Submission Successful</h2>
-<div class="ref" id="refDisplay"></div>
-<div class="summary" id="summaryBox"></div>
-
-<p style="text-align:center;font-size:13px">You may close this page.</p>
+    <button type="submit" id="submitBtn">Submit</button>
+    <div class="helper" id="helperText"></div>
+  </form>
 </div>
 
+<!-- SUCCESS -->
+<div class="container success-container" id="successBox" style="display:none;">
+  <div class="watermark" id="watermark">SUBMITTED</div>
+
+  <div class="successIcon">
+    <svg viewBox="0 0 24 24" fill="none">
+      <circle cx="12" cy="12" r="10" stroke="#1e88e5" stroke-width="2"/>
+      <path d="M7 12l3 3 7-7" stroke="#1e88e5" stroke-width="2"/>
+    </svg>
+  </div>
+
+  <h2>Submission Successful</h2>
+  <div class="ref" id="refDisplay"></div>
+  <div class="summary" id="summaryBox"></div>
+
+  <div class="consent" style="margin-top:15px;">
+    ✔ CONSENT CONFIRMED FOR OFFICIAL COMMUNICATION PURPOSES.
+  </div>
+
+  <p style="text-align:center;font-size:13px;">
+    You may safely close this page.
+  </p>
+</div>
+
+<!-- FOOTER -->
 <div class="footer">
-<div class="divider"></div>
-© <span id="yr"></span> sczpnet.org · Form Version AGY-CI-v1.0
+  <div class="divider"></div>
+  <div id="trademark"></div>
+  <div>
+    Information submitted is collected solely for communication and
+    administrative record purposes.
+  </div>
 </div>
 
 <script>
-const mandatory=[
-{id:"agency",err:"err_agency"},
-{id:"pic1",err:"err_pic1"},
-{id:"contact1",err:"err_contact1"},
-{id:"whatsapp",err:"err_whatsapp"}
+/* ===== PAGE LOAD ===== */
+window.onload=function(){
+  if(!FORM_ENABLED){
+    formBox.style.display="none";
+    successBox.style.display="none";
+    maintenanceBox.style.display="block";
+  }
+};
+
+/* ===== VALIDATION ===== */
+const mandatoryFields=[
+  {id:"agency",err:"err_agency"},
+  {id:"pic1",err:"err_pic1"},
+  {id:"contact1",err:"err_contact1"},
+  {id:"whatsapp",err:"err_whatsapp"}
 ];
 
 function formatPhone(el){
-let v=el.value.replace(/\D/g,'');
-if(v.startsWith("0"))v="6"+v;
-if(!v.startsWith("6"))v="6"+v;
-el.value=v;
+  let v=el.value.replace(/\D/g,'');
+  if(v.startsWith("0"))v="6"+v;
+  if(!v.startsWith("6"))v="6"+v;
+  el.value=v;
 }
 
 function updateState(){
-let ok=true;
-mandatory.forEach(f=>{
-const i=document.getElementById(f.id);
-const e=document.getElementById(f.err);
-if(!i.value.trim()){
-ok=false; i.classList.add("error"); e.style.display="block";
-}else{
-i.classList.remove("error"); e.style.display="none";
-}
-});
-submitBtn.disabled=!ok||!consent.checked;
-submitBtn.classList.toggle("enabled",!submitBtn.disabled);
+  let ok=true;
+  mandatoryFields.forEach(f=>{
+    const i=document.getElementById(f.id);
+    const e=document.getElementById(f.err);
+    if(!i.value.trim()){
+      ok=false;
+      i.classList.add("error");
+      e.style.display="block";
+    }else{
+      i.classList.remove("error");
+      e.style.display="none";
+    }
+  });
+
+  submitBtn.disabled=!ok||!consent.checked;
+  submitBtn.classList.toggle("enabled",!submitBtn.disabled);
+  helperText.innerText=!ok
+    ?"Please complete all mandatory fields."
+    :!consent.checked
+    ?"Please confirm consent to proceed."
+    :"";
 }
 
-mandatory.forEach(f=>{
-document.getElementById(f.id).addEventListener("input",updateState);
+mandatoryFields.forEach(f=>{
+  document.getElementById(f.id).addEventListener("input",updateState);
 });
 
+/* ===== SUBMIT ===== */
 function submitForm(){
-updateState();
-if(submitBtn.disabled) return false;
+  updateState();
+  if(submitBtn.disabled) return false;
 
-const ref="AGY-"+Date.now();
-formBox.style.display="none";
-successBox.style.display="block";
+  const ref=generateRef();
+  const data=new URLSearchParams();
+  data.append("ref",ref);
+  data.append("agency",agency.value.toUpperCase());
+  data.append("pic1",pic1.value.toUpperCase());
+  data.append("pic2",pic2.value.toUpperCase());
+  data.append("contact1",contact1.value);
+  data.append("contact2",contact2.value);
+  data.append("whatsapp",whatsapp.value);
+  data.append("consent","YES");
 
-refDisplay.innerText="REFERENCE: "+ref;
-summaryBox.innerHTML=
-`<div><b>AGENCY:</b> ${agency.value}</div>
- <div><b>PIC:</b> ${pic1.value}</div>
- <div><b>CONTACT:</b> ${contact1.value}</div>
- <div><b>WHATSAPP:</b> ${whatsapp.value}</div>`;
+  fetch("https://script.google.com/macros/s/AKfycbxOQSUWLw2C0BP5FHu3wBsHw1irrB-qwGMRlzO_xtTMqrnYPcUQlV4wkquytKpwtQ/exec",
+    {method:"POST",body:data});
 
-return false;
+  formBox.style.display="none";
+  successBox.style.display="block";
+  watermark.style.display="block";
+
+  refDisplay.innerText="REFERENCE NO: "+ref;
+  summaryBox.innerHTML=
+    `<div><b>AGENCY:</b> ${agency.value.toUpperCase()}</div>
+     <div><b>PIC NAME 1:</b> ${pic1.value.toUpperCase()}</div>
+     ${pic2.value?`<div><b>PIC NAME 2:</b> ${pic2.value.toUpperCase()}</div>`:""}
+     <div><b>CONTACT (MANDATORY):</b> ${contact1.value}</div>
+     ${contact2.value?`<div><b>CONTACT (OPTIONAL):</b> ${contact2.value}</div>`:""}
+     <div><b>WHATSAPP NO:</b> ${whatsapp.value}</div>`;
+
+  return false;
 }
 
-yr.innerText=new Date().getFullYear();
+function generateRef(){
+  const d=new Date();
+  return "AGY-"+d.getFullYear()
+    +String(d.getMonth()+1).padStart(2,"0")
+    +String(d.getDate()).padStart(2,"0")+"-"
+    +String(d.getHours()).padStart(2,"0")
+    +String(d.getMinutes()).padStart(2,"0")
+    +String(d.getSeconds()).padStart(2,"0");
+}
+
+/* FOOTER */
+(function(){
+  const year=new Date().getFullYear();
+  trademark.innerHTML=
+    `© ${year} <a href="https://sczpnet.org" target="_blank">sczpnet.org</a> · For Authorized Agency Use`;
+})();
 </script>
 
 </body>
