--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@ button.enabled:hover{
 <body>
 
 <script>
-/* ===== ON / OFF MODE ===== */
-var FORM_ENABLED = false;
+/* ===== ON true / OFF MODE false ===== */
+var FORM_ENABLED = true;
 </script>
 
 <!-- MAINTENANCE -->
